appunti/struttura/vpc_info.json
[
  {
    "Region": "eu-south-1",
    "VPCs": [
      {
        "OwnerId": "538927841179",
        "InstanceTenancy": "default",
        "CidrBlockAssociationSet": [
          {
            "AssociationId": "vpc-cidr-assoc-08eeae39440ecc971",
            "CidrBlock": "10.0.0.0/16",
            "CidrBlockState": {
              "State": "associated"
            }
          }
        ],
        "IsDefault": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "Finanz-vpc"
          }
        ],
        "BlockPublicAccessStates": {
          "InternetGatewayBlockMode": "off"
        },
        "VpcId": "vpc-0954528d44c0efa46",
        "State": "available",
        "CidrBlock": "10.0.0.0/16",
        "DhcpOptionsId": "dopt-08f50e2254db92ab7"
      }
    ],
    "Subnets": [
      {
        "AvailabilityZoneId": "eus1-az1",
        "MapCustomerOwnedIpOnLaunch": false,
        "OwnerId": "538927841179",
        "AssignIpv6AddressOnCreation": false,
        "Ipv6CidrBlockAssociationSet": [],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Finanz-subnet-private1-eu-south-1a"
          }
        ],
        "SubnetArn": "arn:aws:ec2:eu-south-1:538927841179:subnet/subnet-04882a2313d7c4c45",
        "EnableDns64": false,
        "Ipv6Native": false,
        "PrivateDnsNameOptionsOnLaunch": {
          "HostnameType": "ip-name",
          "EnableResourceNameDnsARecord": false,
          "EnableResourceNameDnsAAAARecord": false
        },
        "BlockPublicAccessStates": {
          "InternetGatewayBlockMode": "off"
        },
        "SubnetId": "subnet-04882a2313d7c4c45",
        "State": "available",
        "VpcId": "vpc-0954528d44c0efa46",
        "CidrBlock": "10.0.128.0/20",
        "AvailableIpAddressCount": 4090,
        "AvailabilityZone": "eu-south-1a",
        "DefaultForAz": false,
        "MapPublicIpOnLaunch": false
      },
      {
        "AvailabilityZoneId": "eus1-az1",
        "MapCustomerOwnedIpOnLaunch": false,
        "OwnerId": "538927841179",
        "AssignIpv6AddressOnCreation": false,
        "Ipv6CidrBlockAssociationSet": [],
        "Tags": [
          {
            "Key": "Name",
            "Value": "RDS-Pvt-subnet-1"
          }
        ],
        "SubnetArn": "arn:aws:ec2:eu-south-1:538927841179:subnet/subnet-0a5a18bbef2a7408f",
        "EnableDns64": false,
        "Ipv6Native": false,
        "PrivateDnsNameOptionsOnLaunch": {
          "HostnameType": "ip-name",
          "EnableResourceNameDnsARecord": false,
          "EnableResourceNameDnsAAAARecord": false
        },
        "BlockPublicAccessStates": {
          "InternetGatewayBlockMode": "off"
        },
        "SubnetId": "subnet-0a5a18bbef2a7408f",
        "State": "available",
        "VpcId": "vpc-0954528d44c0efa46",
        "CidrBlock": "10.0.32.0/25",
        "AvailableIpAddressCount": 122,
        "AvailabilityZone": "eu-south-1a",
        "DefaultForAz": false,
        "MapPublicIpOnLaunch": false
      },
      {
        "AvailabilityZoneId": "eus1-az1",
        "MapCustomerOwnedIpOnLaunch": false,
        "OwnerId": "538927841179",
        "AssignIpv6AddressOnCreation": false,
        "Ipv6CidrBlockAssociationSet": [],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Finanz-subnet-public1-eu-south-1a"
          }
        ],
        "SubnetArn": "arn:aws:ec2:eu-south-1:538927841179:subnet/subnet-0606064051bcec44c",
        "EnableDns64": false,
        "Ipv6Native": false,
        "PrivateDnsNameOptionsOnLaunch": {
          "HostnameType": "ip-name",
          "EnableResourceNameDnsARecord": false,
          "EnableResourceNameDnsAAAARecord": false
        },
        "BlockPublicAccessStates": {
          "InternetGatewayBlockMode": "off"
        },
        "SubnetId": "subnet-0606064051bcec44c",
        "State": "available",
        "VpcId": "vpc-0954528d44c0efa46",
        "CidrBlock": "10.0.0.0/20",
        "AvailableIpAddressCount": 4089,
        "AvailabilityZone": "eu-south-1a",
        "DefaultForAz": false,
        "MapPublicIpOnLaunch": false
      },
      {
        "AvailabilityZoneId": "eus1-az2",
        "MapCustomerOwnedIpOnLaunch": false,
        "OwnerId": "538927841179",
        "AssignIpv6AddressOnCreation": false,
        "Ipv6CidrBlockAssociationSet": [],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Finanz-subnet-private2-eu-south-1b"
          }
        ],
        "SubnetArn": "arn:aws:ec2:eu-south-1:538927841179:subnet/subnet-0d6c079c9e2ba647a",
        "EnableDns64": false,
        "Ipv6Native": false,
        "PrivateDnsNameOptionsOnLaunch": {
          "HostnameType": "ip-name",
          "EnableResourceNameDnsARecord": false,
          "EnableResourceNameDnsAAAARecord": false
        },
        "BlockPublicAccessStates": {
          "InternetGatewayBlockMode": "off"
        },
        "SubnetId": "subnet-0d6c079c9e2ba647a",
        "State": "available",
        "VpcId": "vpc-0954528d44c0efa46",
        "CidrBlock": "10.0.144.0/20",
        "AvailableIpAddressCount": 4089,
        "AvailabilityZone": "eu-south-1b",
        "DefaultForAz": false,
        "MapPublicIpOnLaunch": false
      },
      {
        "AvailabilityZoneId": "eus1-az2",
        "MapCustomerOwnedIpOnLaunch": false,
        "OwnerId": "538927841179",
        "AssignIpv6AddressOnCreation": false,
        "Ipv6CidrBlockAssociationSet": [],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Finanz-subnet-public2-eu-south-1b"
          }
        ],
        "SubnetArn": "arn:aws:ec2:eu-south-1:538927841179:subnet/subnet-04e6b25665a7f6c31",
        "EnableDns64": false,
        "Ipv6Native": false,
        "PrivateDnsNameOptionsOnLaunch": {
          "HostnameType": "ip-name",
          "EnableResourceNameDnsARecord": false,
          "EnableResourceNameDnsAAAARecord": false
        },
        "BlockPublicAccessStates": {
          "InternetGatewayBlockMode": "off"
        },
        "SubnetId": "subnet-04e6b25665a7f6c31",
        "State": "available",
        "VpcId": "vpc-0954528d44c0efa46",
        "CidrBlock": "10.0.16.0/20",
        "AvailableIpAddressCount": 4091,
        "AvailabilityZone": "eu-south-1b",
        "DefaultForAz": false,
        "MapPublicIpOnLaunch": false
      },
      {
        "AvailabilityZoneId": "eus1-az3",
        "MapCustomerOwnedIpOnLaunch": false,
        "OwnerId": "538927841179",
        "AssignIpv6AddressOnCreation": false,
        "Ipv6CidrBlockAssociationSet": [],
        "Tags": [
          {
            "Key": "Name",
            "Value": "RDS-Pvt-subnet-3"
          }
        ],
        "SubnetArn": "arn:aws:ec2:eu-south-1:538927841179:subnet/subnet-0daf43bea46f3397a",
        "EnableDns64": false,
        "Ipv6Native": false,
        "PrivateDnsNameOptionsOnLaunch": {
          "HostnameType": "ip-name",
          "EnableResourceNameDnsARecord": false,
          "EnableResourceNameDnsAAAARecord": false
        },
        "BlockPublicAccessStates": {
          "InternetGatewayBlockMode": "off"
        },
        "SubnetId": "subnet-0daf43bea46f3397a",
        "State": "available",
        "VpcId": "vpc-0954528d44c0efa46",
        "CidrBlock": "10.0.33.0/25",
        "AvailableIpAddressCount": 122,
        "AvailabilityZone": "eu-south-1c",
        "DefaultForAz": false,
        "MapPublicIpOnLaunch": false
      },
      {
        "AvailabilityZoneId": "eus1-az2",
        "MapCustomerOwnedIpOnLaunch": false,
        "OwnerId": "538927841179",
        "AssignIpv6AddressOnCreation": false,
        "Ipv6CidrBlockAssociationSet": [],
        "Tags": [
          {
            "Key": "Name",
            "Value": "RDS-Pvt-subnet-2"
          }
        ],
        "SubnetArn": "arn:aws:ec2:eu-south-1:538927841179:subnet/subnet-07a4c4742cedbce8a",
        "EnableDns64": false,
        "Ipv6Native": false,
        "PrivateDnsNameOptionsOnLaunch": {
          "HostnameType": "ip-name",
          "EnableResourceNameDnsARecord": false,
          "EnableResourceNameDnsAAAARecord": false
        },
        "BlockPublicAccessStates": {
          "InternetGatewayBlockMode": "off"
        },
        "SubnetId": "subnet-07a4c4742cedbce8a",
        "State": "available",
        "VpcId": "vpc-0954528d44c0efa46",
        "CidrBlock": "10.0.32.128/25",
        "AvailableIpAddressCount": 123,
        "AvailabilityZone": "eu-south-1b",
        "DefaultForAz": false,
        "MapPublicIpOnLaunch": false
      }
    ],
    "RouteTables": [
      {
        "Associations": [
          {
            "Main": false,
            "RouteTableAssociationId": "rtbassoc-0955f7a3aa61dc345",
            "RouteTableId": "rtb-00cd76eab9c7143c9",
            "SubnetId": "subnet-0d6c079c9e2ba647a",
            "AssociationState": {
              "State": "associated"
            }
          }
        ],
        "PropagatingVgws": [],
        "RouteTableId": "rtb-00cd76eab9c7143c9",
        "Routes": [
          {
            "DestinationCidrBlock": "10.0.0.0/16",
            "GatewayId": "local",
            "Origin": "CreateRouteTable",
            "State": "active"
          },
          {
            "DestinationCidrBlock": "0.0.0.0/0",
            "GatewayId": "igw-02364236a62913136",
            "Origin": "CreateRoute",
            "State": "active"
          },
          {
            "DestinationPrefixListId": "pl-daaa4fb3",
            "GatewayId": "vpce-033d76d7c2fc48ff6",
            "Origin": "CreateRoute",
            "State": "active"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Finanz-rtb-private2-eu-south-1b"
          }
        ],
        "VpcId": "vpc-0954528d44c0efa46",
        "OwnerId": "538927841179"
      },
      {
        "Associations": [
          {
            "Main": false,
            "RouteTableAssociationId": "rtbassoc-0faccc80f73636437",
            "RouteTableId": "rtb-03879c952dd686482",
            "SubnetId": "subnet-0a5a18bbef2a7408f",
            "AssociationState": {
              "State": "associated"
            }
          },
          {
            "Main": false,
            "RouteTableAssociationId": "rtbassoc-05f86322fffebc90a",
            "RouteTableId": "rtb-03879c952dd686482",
            "SubnetId": "subnet-0daf43bea46f3397a",
            "AssociationState": {
              "State": "associated"
            }
          },
          {
            "Main": false,
            "RouteTableAssociationId": "rtbassoc-089f86e022c8754af",
            "RouteTableId": "rtb-03879c952dd686482",
            "SubnetId": "subnet-07a4c4742cedbce8a",
            "AssociationState": {
              "State": "associated"
            }
          }
        ],
        "PropagatingVgws": [],
        "RouteTableId": "rtb-03879c952dd686482",
        "Routes": [
          {
            "DestinationCidrBlock": "10.0.0.0/16",
            "GatewayId": "local",
            "Origin": "CreateRouteTable",
            "State": "active"
          },
          {
            "DestinationCidrBlock": "0.0.0.0/0",
            "GatewayId": "igw-02364236a62913136",
            "Origin": "CreateRoute",
            "State": "active"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "RDS-Pvt-rt"
          }
        ],
        "VpcId": "vpc-0954528d44c0efa46",
        "OwnerId": "538927841179"
      },
      {
        "Associations": [
          {
            "Main": false,
            "RouteTableAssociationId": "rtbassoc-0ec69401a688a61fa",
            "RouteTableId": "rtb-00080daab0c45e10f",
            "SubnetId": "subnet-04882a2313d7c4c45",
            "AssociationState": {
              "State": "associated"
            }
          }
        ],
        "PropagatingVgws": [],
        "RouteTableId": "rtb-00080daab0c45e10f",
        "Routes": [
          {
            "DestinationCidrBlock": "10.0.0.0/16",
            "GatewayId": "local",
            "Origin": "CreateRouteTable",
            "State": "active"
          },
          {
            "DestinationCidrBlock": "0.0.0.0/0",
            "GatewayId": "igw-02364236a62913136",
            "Origin": "CreateRoute",
            "State": "active"
          },
          {
            "DestinationPrefixListId": "pl-daaa4fb3",
            "GatewayId": "vpce-033d76d7c2fc48ff6",
            "Origin": "CreateRoute",
            "State": "active"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Finanz-rtb-private1-eu-south-1a"
          }
        ],
        "VpcId": "vpc-0954528d44c0efa46",
        "OwnerId": "538927841179"
      },
      {
        "Associations": [
          {
            "Main": true,
            "RouteTableAssociationId": "rtbassoc-0c76e310a3a007fad",
            "RouteTableId": "rtb-0c3b5b9dbb2fd12c1",
            "AssociationState": {
              "State": "associated"
            }
          }
        ],
        "PropagatingVgws": [],
        "RouteTableId": "rtb-0c3b5b9dbb2fd12c1",
        "Routes": [
          {
            "DestinationCidrBlock": "10.0.0.0/16",
            "GatewayId": "local",
            "Origin": "CreateRouteTable",
            "State": "active"
          }
        ],
        "Tags": [],
        "VpcId": "vpc-0954528d44c0efa46",
        "OwnerId": "538927841179"
      },
      {
        "Associations": [
          {
            "Main": false,
            "RouteTableAssociationId": "rtbassoc-0d8788720886b3522",
            "RouteTableId": "rtb-0e6a59f219bd1737c",
            "SubnetId": "subnet-0606064051bcec44c",
            "AssociationState": {
              "State": "associated"
            }
          },
          {
            "Main": false,
            "RouteTableAssociationId": "rtbassoc-0b53725fcd97e0b3f",
            "RouteTableId": "rtb-0e6a59f219bd1737c",
            "SubnetId": "subnet-04e6b25665a7f6c31",
            "AssociationState": {
              "State": "associated"
            }
          }
        ],
        "PropagatingVgws": [],
        "RouteTableId": "rtb-0e6a59f219bd1737c",
        "Routes": [
          {
            "DestinationCidrBlock": "10.0.0.0/16",
            "GatewayId": "local",
            "Origin": "CreateRouteTable",
            "State": "active"
          },
          {
            "DestinationCidrBlock": "0.0.0.0/0",
            "GatewayId": "igw-02364236a62913136",
            "Origin": "CreateRoute",
            "State": "active"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Finanz-rtb-public"
          }
        ],
        "VpcId": "vpc-0954528d44c0efa46",
        "OwnerId": "538927841179"
      }
    ],
    "InternetGateways": [
      {
        "Attachments": [
          {
            "State": "available",
            "VpcId": "vpc-0954528d44c0efa46"
          }
        ],
        "InternetGatewayId": "igw-02364236a62913136",
        "OwnerId": "538927841179",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Finanz-igw"
          }
        ]
      }
    ],
    "NetworkAcls": [
      {
        "Associations": [
          {
            "NetworkAclAssociationId": "aclassoc-09d5571626eebd1a7",
            "NetworkAclId": "acl-02772910e8a0d1d26",
            "SubnetId": "subnet-0606064051bcec44c"
          },
          {
            "NetworkAclAssociationId": "aclassoc-036acbd9f2285acb5",
            "NetworkAclId": "acl-02772910e8a0d1d26",
            "SubnetId": "subnet-0d6c079c9e2ba647a"
          },
          {
            "NetworkAclAssociationId": "aclassoc-0ab73c27eeaa48a18",
            "NetworkAclId": "acl-02772910e8a0d1d26",
            "SubnetId": "subnet-0daf43bea46f3397a"
          },
          {
            "NetworkAclAssociationId": "aclassoc-02347b479da23825d",
            "NetworkAclId": "acl-02772910e8a0d1d26",
            "SubnetId": "subnet-07a4c4742cedbce8a"
          },
          {
            "NetworkAclAssociationId": "aclassoc-073a3e035af554411",
            "NetworkAclId": "acl-02772910e8a0d1d26",
            "SubnetId": "subnet-04882a2313d7c4c45"
          },
          {
            "NetworkAclAssociationId": "aclassoc-0889864bba5eb6053",
            "NetworkAclId": "acl-02772910e8a0d1d26",
            "SubnetId": "subnet-0a5a18bbef2a7408f"
          },
          {
            "NetworkAclAssociationId": "aclassoc-07341d99e30648f40",
            "NetworkAclId": "acl-02772910e8a0d1d26",
            "SubnetId": "subnet-04e6b25665a7f6c31"
          }
        ],
        "Entries": [
          {
            "CidrBlock": "0.0.0.0/0",
            "Egress": true,
            "Protocol": "-1",
            "RuleAction": "allow",
            "RuleNumber": 100
          },
          {
            "CidrBlock": "0.0.0.0/0",
            "Egress": true,
            "Protocol": "-1",
            "RuleAction": "deny",
            "RuleNumber": 32767
          },
          {
            "CidrBlock": "0.0.0.0/0",
            "Egress": false,
            "Protocol": "-1",
            "RuleAction": "allow",
            "RuleNumber": 100
          },
          {
            "CidrBlock": "0.0.0.0/0",
            "Egress": false,
            "Protocol": "-1",
            "RuleAction": "deny",
            "RuleNumber": 32767
          }
        ],
        "IsDefault": true,
        "NetworkAclId": "acl-02772910e8a0d1d26",
        "Tags": [],
        "VpcId": "vpc-0954528d44c0efa46",
        "OwnerId": "538927841179"
      }
    ],
    "SecurityGroups": [
      {
        "GroupId": "sg-0076bdecc361a952b",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "Tags": [
          {
            "Key": "aws:cloudformation:logical-id",
            "Value": "AWSEBSecurityGroup"
          },
          {
            "Key": "aws:cloudformation:stack-name",
            "Value": "awseb-e-gueuqgs9nc-stack"
          },
          {
            "Key": "elasticbeanstalk:environment-name",
            "Value": "Finanz-Prod"
          },
          {
            "Key": "Name",
            "Value": "Finanz-Prod"
          },
          {
            "Key": "elasticbeanstalk:environment-id",
            "Value": "e-gueuqgs9nc"
          },
          {
            "Key": "aws:cloudformation:stack-id",
            "Value": "arn:aws:cloudformation:eu-south-1:538927841179:stack/awseb-e-gueuqgs9nc-stack/26d89f70-6fd6-11ef-8257-063fa7bb7ee7"
          }
        ],
        "VpcId": "vpc-0954528d44c0efa46",
        "SecurityGroupArn": "arn:aws:ec2:eu-south-1:538927841179:security-group/sg-0076bdecc361a952b",
        "OwnerId": "538927841179",
        "GroupName": "awseb-e-gueuqgs9nc-stack-AWSEBSecurityGroup-rpAF62GyQel4",
        "Description": "VPC Security Group",
        "IpPermissions": [
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "UserIdGroupPairs": [
              {
                "UserId": "538927841179",
                "GroupId": "sg-0c5a3e138284857a1"
              }
            ],
            "IpRanges": [],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      },
      {
        "GroupId": "sg-0828030ab011a59a3",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "VpcId": "vpc-0954528d44c0efa46",
        "SecurityGroupArn": "arn:aws:ec2:eu-south-1:538927841179:security-group/sg-0828030ab011a59a3",
        "OwnerId": "538927841179",
        "GroupName": "default",
        "Description": "default VPC security group",
        "IpPermissions": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      },
      {
        "GroupId": "sg-0d8116196728e8709",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Finanz-Dev"
          },
          {
            "Key": "aws:cloudformation:logical-id",
            "Value": "AWSEBSecurityGroup"
          },
          {
            "Key": "elasticbeanstalk:environment-id",
            "Value": "e-q9sa4qsmjz"
          },
          {
            "Key": "aws:cloudformation:stack-name",
            "Value": "awseb-e-q9sa4qsmjz-stack"
          },
          {
            "Key": "elasticbeanstalk:environment-name",
            "Value": "Finanz-Dev"
          },
          {
            "Key": "aws:cloudformation:stack-id",
            "Value": "arn:aws:cloudformation:eu-south-1:538927841179:stack/awseb-e-q9sa4qsmjz-stack/717426c0-8265-11ef-8ed8-0e9ce4a5f1fb"
          }
        ],
        "VpcId": "vpc-0954528d44c0efa46",
        "SecurityGroupArn": "arn:aws:ec2:eu-south-1:538927841179:security-group/sg-0d8116196728e8709",
        "OwnerId": "538927841179",
        "GroupName": "awseb-e-q9sa4qsmjz-stack-AWSEBSecurityGroup-XV7AjQKxBttz",
        "Description": "VPC Security Group",
        "IpPermissions": [
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      },
      {
        "GroupId": "sg-0c5a3e138284857a1",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "Tags": [
          {
            "Key": "elasticbeanstalk:environment-name",
            "Value": "Finanz-Prod"
          },
          {
            "Key": "elasticbeanstalk:environment-id",
            "Value": "e-gueuqgs9nc"
          },
          {
            "Key": "aws:cloudformation:stack-name",
            "Value": "awseb-e-gueuqgs9nc-stack"
          },
          {
            "Key": "Name",
            "Value": "Finanz-Prod"
          },
          {
            "Key": "aws:cloudformation:logical-id",
            "Value": "AWSEBLoadBalancerSecurityGroup"
          },
          {
            "Key": "aws:cloudformation:stack-id",
            "Value": "arn:aws:cloudformation:eu-south-1:538927841179:stack/awseb-e-gueuqgs9nc-stack/26d89f70-6fd6-11ef-8257-063fa7bb7ee7"
          }
        ],
        "VpcId": "vpc-0954528d44c0efa46",
        "SecurityGroupArn": "arn:aws:ec2:eu-south-1:538927841179:security-group/sg-0c5a3e138284857a1",
        "OwnerId": "538927841179",
        "GroupName": "awseb-e-gueuqgs9nc-stack-AWSEBLoadBalancerSecurityGroup-QUnRogpBwUIA",
        "Description": "Load Balancer Security Group",
        "IpPermissions": [
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 443,
            "ToPort": 443,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      }
    ]
  }
]
